...
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_healthy_food" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="@+id/card"
...
